index.html, test.py - editing some features

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Ini adalah Web Testing yagesya</h1>
+    <p>Ini adalah paragraf untuk web testing yagesya</p>
 </body>
 </html></html>
